third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/text-after-integer.stderr
TOML parse error at line 1, column 13
  |
1 | answer = 42 the ultimate answer?
  |             ^
expected newline, `#`
